--- a/victor_alves_cv.tex
+++ b/victor_alves_cv.tex
@@ -137,13 +137,13 @@
 %---------- HEADING ----------
 
 \begin{center}
-    \textbf{\Huge \scshape Victor Alves} \\ \vspace{3pt}
+    \textbf{\Huge \scshape Beatriz Dantas} \\ \vspace{3pt}
     \small
-    \faMobile \hspace{.5pt} \href{tel:13044763009}{\color{blue}+1-304-476-3009}
+    \faMobile \hspace{.5pt} \href{tel:13042449132}{\color{blue}+1-304-244-9132}
     $|$
-    \faAt \hspace{.5pt} \href{mailto:vc00004@mix.wvu.edu}{\color{blue}vc00004@mix.wvu.edu}
+    \faAt \hspace{.5pt} \href{mailto:bnd00011@mix.wvu.edu}{\color{blue}bnd00011@mix.wvu.edu}
     $|$
-    \faLinkedinSquare \hspace{.5pt} \href{https://www.linkedin.com/in/victor-alves-cheme/}{\color{blue}LinkedIn}
+    \faLinkedinSquare \hspace{.5pt} \href{https://www.linkedin.com/in/beatriznadantas/}{\color{blue}LinkedIn}
     $|$
     \faGithub \hspace{.5pt} \href{https://github.com/victoraalves}{\color{blue}GitHub}
     $|$
@@ -163,8 +163,8 @@
     \resumeEducationHeading
       {West Virginia University
       }{Morgantown, WV, USA}
-      {Ph.D. Candidate (ABD Status), Chemical Engineering;}{Aug 2020 \textbf{--} May 2024 (Expected, flexible)}
-      {\textbf{GPA: 3.80/4.00}}{}
+      {Ph.D. Student, Chemical Engineering;}{Aug 2022 \textbf{--} May 2027 (Expected, flexible)}
+      {}{}
         % \resumeItemListStart
             % \resumeItem{\textbf{Relevant coursework:} Calculus I-II, Matrix Theory, Differential Equations, Materials Science, Electrical Circuits I-II, Digital System Design, Numerical Methods, Probability Theory, Electronics I-II, Signals and Systems, Electromagnetic Field Theory, Energy Conversion, System Dynamics and Control, Communication Engineering}
         % \resumeItemListEnd
@@ -172,23 +172,10 @@
     \resumeEducationHeading
       {Federal University of Campina Grande
       }{Campina Grande, Paraiba, Brazil}
-      {M.Sc., Chemical Engineering;}{Sep 2017 \textbf{--} Mar 2020}{\textbf{Academic Coefficient: 10.00/10.00}}{}
-    
-
-    \resumeEducationHeading
-      {University of Birmingham
-      }{Birmingham, UK}
-      {B.Sc., Chemical Engineering (Exchange Student); }{Sep 2014 \textbf{--} Aug 2015}{\textbf{British Degree Classification: Upper Second}}{}
-
-    
-    \resumeEducationHeading
-      {Federal University of Campina Grande
-      }{Campina Grande, Paraiba, Brazil}
-      {B.Sc., Chemical Engineering;}{Mar 2012 \textbf{--} Mar 2017}{\textbf{Academic Coefficient: 8.69/10.00}}{}
+      {B.Sc., Chemical Engineering;}{Apr 2017 \textbf{--} Apr 2022}
+      {}{}
 
   \resumeSubHeadingListEnd
-
-
 
 %----------- RESEARCH EXPERIENCE -----------
 
@@ -200,21 +187,18 @@
       {West Virginia University}{Morgantown, WV, USA}
       {Graduate Research Assistant (Ph.D.)}{Aug 2020 \textbf{--} Currently}
         \resumeItemListStart
-            \resumeItem{Currently working with Dr. Fernando V. Lima on the development of emerging techniques for process operability calculations, involving mainly supervised machine-learning, constrained nonlinear programming (NLP) and automatic differentiation (AD) for efficient algorithm development.}
-            \resumeItem{Development of an open-source Python package for process operability calculations, for ease-of-use and dissemination of operability algorithms in academia and industry.}
-            \resumeItem{Control, Optimization and Design for Energy and Sustainability (CODES) Research Group leader, supervising the group's activities, as well as organizing the semester schedule, workshops, weekly meetings and relevant announcements.}
+            \resumeItem{Proton Exchange Membrane Water Electrolysis (PEMWE) system assessment via flexibility and operability analysis. }
+            \resumeItem{Modeling and simulation of Ex-situ Carbon Mineralization using Coal Fly Ash and the Recovery of Rare Earth Elements.}
         \resumeItemListEnd
     
     \resumeSubheading
       {Federal University of Campina Grande}{Campina Grande, Paraiba, Brazil}
-      {Graduate Research Assistant (M.Sc.)}{Sep 2017 \textbf{--} Mar 2020}
+      {undergraduate Research  (M.Sc.)}{Sep 2017 \textbf{--} Mar 2020}
         \resumeItemListStart
             \resumeItem{M.Sc. thesis: ``Metamodel-based Numerical Techniques for Self-Optimizing Control'': Developed a methodology capable of using Gaussian Process Regression (GPR) to aid the optimal selection of controlled variables (CVs) in industrial processes, following the Self-Optimizing Control (SOC) methodology.}
         \resumeItemListEnd
     
   \resumeSubHeadingListEnd
-
-
 
 %----------- WORK EXPERIENCE -----------
 
@@ -223,8 +207,8 @@
   \resumeSubHeadingListStart
     
     \resumeSubheading
-      {West Virginia University}{Morgantown, WV, USA}
-      {Graduate Research Assistant (Ph.D.)}{Aug 2020 \textbf{--} Currently}
+      {Columbia University}{New York, NY, USA}
+      {Visiting Scholar (Ph.D.)}{Jul. 2023  \textbf{--} Currently}
         \resumeItemListStart
             \resumeItem{Tutored undergraduate students at the senior level, allowing them to be introduced to scientific research in process systems engineering, process modeling (steady-state/dynamics), process operability concepts and control.}
             \resumeItem{Collaborated with Dr. Fernando V. Lima as his Teaching Assistant for the Chemical Process Control course, undergraduate senior-level. Prepared lectures, tutorials in MATLAB/Simulink and problem sets for students, in a problem-based learning fashion.}
@@ -252,15 +236,23 @@
         \resumeItemListEnd
     
     \resumeSubheading
-      {SigmaCT as a contractor to Braskem}{Marechal Deodoro, Alagoas, Brazil}
-      {Process Engineering Intern}{Mar 2017 \textbf{--} Sep 2017}
+      {Accenture}{Campina Grande, Paraiba, Brazil}
+      {MES MOM and Automation Associate (Full-Time)}{Dec 2021 \textbf{--} Jun 2022}
         \resumeItemListStart
-            \resumeItem{Worked as a process engineering intern in Vinyl Chloride Monomer (VCM) and Polyvinyl Chloride (PVC) production plants.}
-            \resumeItem{Developed simulations in Aspen Plus and Aspen Plus Dynamics to investigate operating regions of the VCM/PVC plants.}
+            \resumeItem{Application of the PI System™ and Aspen InfoPlus.21® software to collect, store, view, analyze, and share operational data with users.}
+            \resumeItem{Understand and refine processes, working with clients to simplify, standardize and automate work and business processes found in manufacturing.}
           \resumeItemListEnd
 
-  \resumeSubHeadingListEnd
 
+    \resumeSubheading
+    {Accenture}{Campina Grande, Paraiba, Brazil}
+    {MES MOM and Automation New Associate (Part-Time)}{Nov 2020 \textbf{--} Nov 2021}
+      \resumeItemListStart
+          \resumeItem{Application of the PI System™ and Aspen InfoPlus.21® software to collect, store, view, analyze, and share operational data with users.}
+          \resumeItem{Understand and refine processes, working with clients to simplify, standardize and automate work and business processes found in manufacturing.}
+        \resumeItemListEnd
+
+  \resumeSubHeadingListEnd
 
 
 %----------- AWARDS & ACHIEVEMENTS -----------
@@ -287,50 +279,48 @@
 
 % ---------- RESEARCH PUBLICATIONS -------
 
-\setlength{\bibhang}{3pt}
-\defbibenvironment{bibliography}
-{\list
-	{}
-	{\setlength{\leftmargin}{\bibhang}%
-		\setlength{\itemindent}{-\leftmargin}%
-		\setlength{\itemsep}{\bibitemsep}%
-		\setlength{\parsep}{\bibparsep}}}
-{\endlist}
-{\item}
-\nocite{*}
-\printbibliography[env = bibliography, title= Selected Research Publications - Complete list on my {\href{https://scholar.google.com/citations?user=SNptGbgAAAAJ&hl=en}{\color{blue}Google Scholar.}} ]
+%\setlength{\bibhang}{3pt}
+%\defbibenvironment{bibliography}
+%{\list
+%	{}
+%	{\setlength{\leftmargin}{\bibhang}%
+%		\setlength{\itemindent}{-\leftmargin}%
+%		\setlength{\itemsep}{\bibitemsep}%
+%		\setlength{\parsep}{\bibparsep}}}
+%{\endlist}
+%{\item}
+%\nocite{*}
+%\printbibliography[env = bibliography, title= Selected Research Publications - Complete list on my {\href{https://scholar.google.com/citations?user=SNptGbgAAAAJ&hl=en}{\color{blue}Google Scholar.}} ]
 
 
 %----------- PROJECTS -----------
 
-\section{Projects}
-    \vspace{3pt}
-    \resumeSubHeadingListStart
-      
-      \resumeProjectHeading
-        {\textbf{Opyrability: Process Operability Analysis in Python} $|$ \emph{\href{https://codes-group.github.io/opyrability}{\color{blue}Website}}}{}
-          \resumeItemListStart
-            \resumeItem{Opyrability - A Python-based pacakge for process operability analysis - is an open-source project for advanced process operability analyses. The opyrability codebase includes the main operability algorithms, supplementary analysis and visualization methods to allow for the assessment of simultaneous design and control objectives early in the conceptual phase.}
-          \resumeItemListEnd
-      
-      \resumeProjectHeading
-        {\textbf{Metacontrol} $|$ \emph{\href{https://meta-control.net/}{\color{blue}Website}}}{}
-          \resumeItemListStart
-            \resumeItem{Metacontrol is a Python-based software that assembles several methodologies into a single bundle so that a fast implementation of the Self-Optimizing Control (SOC) technique can be achieved.}
-            \resumeItem{Metancontrol's calculation engine and main steps were conceptualized during my Master's thesis.}
-          \resumeItemListEnd
-      
-    \resumeSubHeadingListEnd
+%\section{Projects}
+%    \vspace{3pt}
+%    \resumeSubHeadingListStart
+%      
+%      \resumeProjectHeading
+%        {\textbf{Opyrability: Process Operability Analysis in Python} $|$ \emph{\href{https://codes-group.github.io/opyrability}{\color{blue}Website}}}{}
+%          \resumeItemListStart
+%            \resumeItem{Opyrability - A Python-based pacakge for process operability analysis - is an open-source project for advanced process operability analyses. The opyrability codebase includes the main operability algorithms, supplementary analysis and visualization methods to allow for the assessment of simultaneous design and control objectives early in the conceptual phase.}
+%          \resumeItemListEnd
+%      
+%      \resumeProjectHeading
+%        {\textbf{Metacontrol} $|$ \emph{\href{https://meta-control.net/}{\color{blue}Website}}}{}
+%          \resumeItemListStart
+%            \resumeItem{Metacontrol is a Python-based software that assembles several methodologies into a single bundle so that a fast implementation of the Self-Optimizing Control (SOC) technique can be achieved.}
+%            \resumeItem{Metancontrol's calculation engine and main steps were conceptualized during my Master's thesis.}
+%          \resumeItemListEnd
+%      
+%    \resumeSubHeadingListEnd
 
 
-\section{Teaching}
-    \vspace{3pt}
-    \resumeSubHeadingListStart
-		\resumeTeachingHeading{Chemical Process Control}{West Virginia University}{Teaching Assistant}{Spring, 2023}
-		
-	\resumeSubHeadingListEnd
-
-
+%\section{Teaching}
+%    \vspace{3pt}
+%    \resumeSubHeadingListStart
+%		\resumeTeachingHeading{Chemical Process Control}{West Virginia University}{Teaching Assistant}{Spring, 2023}
+%		
+%	\resumeSubHeadingListEnd
 
 %----------- SKILLS -----------
 
@@ -338,11 +328,11 @@
   \vspace{2pt}
   \resumeSubHeadingListStart
     \small{\item{
-        \textbf{Programming:}{ Python, MATLAB, Markdown, ReStructuredText, LaTeX and exposure to R} \\ \vspace{3pt}
+        \textbf{Programming:}{ Python, MATLAB, CSharp, Visual Basic for Applications(VBA), Markdown, LaTeX and exposure to R} \\ \vspace{3pt}
         
-        \textbf{Technologies/Platforms:}{ Git, GitHub, GitLab, Docker, Simulink, JAX} \\ \vspace{3pt}
+        \textbf{Technologies/Platforms:}{ Git, GitHub, Simulink} \\ \vspace{3pt}
 
-        \textbf{Process simulation:}{ Aspen Plus, Aspen Plus Dynamics, Aspen Custom Modeler, HYSYS, AVEVA Process Simulation, PRO/II, Dynsim} \\ \vspace{3pt}
+        \textbf{Process simulation:}{ Aspen Plus, AVEVA Process Simulation, Ansys CFX} \\ \vspace{3pt}
         
         \textbf{Languages:}{ English and Portuguese}
         
