--- a/victor_alves_cv.tex
+++ b/victor_alves_cv.tex
@@ -145,9 +145,9 @@
     $|$
     \faLinkedinSquare \hspace{.5pt} \href{https://www.linkedin.com/in/beatriznadantas/}{\color{blue}LinkedIn}
     $|$
-    \faGithub \hspace{.5pt} \href{https://github.com/victoraalves}{\color{blue}GitHub}
-    $|$
-    \faGlobe \hspace{.5pt} \href{https://victor-alves.com}{\color{blue}Website/Portfolio}
+    \faGithub \hspace{.5pt} \href{https://github.com/BeatrizDantas-WVU}{\color{blue}GitHub}
+    %$|$
+    %\faGlobe \hspace{.5pt} \href{https://victor-alves.com}{\color{blue}Website/Portfolio}
     $|$
     \faMapMarker \hspace{.5pt} \href{https://www.google.com/maps/place/Engineering+Sciences+Building,+Morgantown,+WV+26505/@39.6459272,-79.9759171,17z/data=!3m1!4b1!4m6!3m5!1s0x88357b99ed193599:0x9b885a8237a27b09!8m2!3d39.6459231!4d-79.9733422!16s%2Fg%2F1q64f48kq?entry=ttu}{\color{blue}Morgantown, WV, USA}
 \end{center}
@@ -185,17 +185,22 @@
   
     \resumeSubheading
       {West Virginia University}{Morgantown, WV, USA}
-      {Graduate Research Assistant (Ph.D.)}{Aug 2020 \textbf{--} Currently}
+      {Graduate Research Assistant (Ph.D.)}{Aug 2022 \textbf{--} Currently}
         \resumeItemListStart
             \resumeItem{Proton Exchange Membrane Water Electrolysis (PEMWE) system assessment via flexibility and operability analysis. }
-            \resumeItem{Modeling and simulation of Ex-situ Carbon Mineralization using Coal Fly Ash and the Recovery of Rare Earth Elements.}
+            \resumeItem{Collaboration with Columbia University: Modeling and simulation of ex-situ 
+            carbon mineralization using coal fly ash.}
+            \resumeItem{Collaboration with University of Maryland: 
+            Techno-economic analysis for depolymerization of plastics using electrified spatiotemporal heating}
         \resumeItemListEnd
     
     \resumeSubheading
       {Federal University of Campina Grande}{Campina Grande, Paraiba, Brazil}
-      {undergraduate Research  (M.Sc.)}{Sep 2017 \textbf{--} Mar 2020}
+      {Undergraduate Research  (B.Sc.)}{Sept 2020 \textbf{--} Sept 2021}
         \resumeItemListStart
-            \resumeItem{M.Sc. thesis: ``Metamodel-based Numerical Techniques for Self-Optimizing Control'': Developed a methodology capable of using Gaussian Process Regression (GPR) to aid the optimal selection of controlled variables (CVs) in industrial processes, following the Self-Optimizing Control (SOC) methodology.}
+            \resumeItem{B.Sc. final project: ``Integrated platform developed in 
+            CSharp to evaluate the intensification of ethylbenzene production 
+            using the GREENSCOPE methodology.}
         \resumeItemListEnd
     
   \resumeSubHeadingListEnd
@@ -208,12 +213,13 @@
     
     \resumeSubheading
       {Columbia University}{New York, NY, USA}
-      {Visiting Scholar (Ph.D.)}{Jul. 2023  \textbf{--} Currently}
+      {Visiting Scholar (Ph.D.)}{Jul. 2023 }
         \resumeItemListStart
-            \resumeItem{Tutored undergraduate students at the senior level, allowing them to be introduced to scientific research in process systems engineering, process modeling (steady-state/dynamics), process operability concepts and control.}
-            \resumeItem{Collaborated with Dr. Fernando V. Lima as his Teaching Assistant for the Chemical Process Control course, undergraduate senior-level. Prepared lectures, tutorials in MATLAB/Simulink and problem sets for students, in a problem-based learning fashion.}
+            \resumeItem{Understand the production of carbonates from industrial waste via carbon mineralization on a laboratory scale.}
+            \resumeItem{Apply the knowledge of Process System Engineering to perform process scale-up.}
         \resumeItemListEnd
-    
+
+
     % \resumeSubheading
       % {Ankara Metropolitan Municipality}{Ankara, Turkey}
       % {SCADA Engineering Intern}{Aug 2021 \textbf{--} Sep 2021}
@@ -225,16 +231,24 @@
     % \vspace{15pt}
     \resumeSubheading
       {Federal University of Campina Grande}{Campina Grande, Paraiba, Brazil}
-      {Graduate Research Assistant (M.Sc.) and Developer}{Sep 2017 \textbf{--} Mar 2020}
+      {Undergraduate Research}{Sep 2019 \textbf{--} Apr 2022}
         \resumeItemListStart
-            \resumeItem{Research and development of BRPWC for PETROBRAS:
-            An automated software capable of easily selecting the
-            most promising self-optimizing control structures in
-            industrial processes.}
-            \resumeItem{Worked on developing the calculation engine in Python for BRPWC, based on the research results from my Master's thesis.}
-            \resumeItem{Conceptualized the user interface for BRPWC, generating mock-ups that were sent to the computer science team to develop the front-end interface.}
+            \resumeItem{Research and development for PETROBRAS:
+            Modeling and evaluation of explosive atmospheres
+             due to the biphasic release of liquids and fluids.}
+            \resumeItem{Evaluation of the effect of obstacles on the dispersion of gases for area classification.}
+            \resumeItem{Application of CFD techniques in the 
+            risk area classification study for the 
+            technological development of industrial processes.}
         \resumeItemListEnd
     
+   \resumeSubheading
+      {West Virginia University}{Virtual Appointment}
+      {Undergraduate Research}{May 2021 \textbf{--} Aug. 2021}
+        \resumeItemListStart
+            \resumeItem{Multi-stage membrane configuration for direct air capture.}
+        \resumeItemListEnd    
+
     \resumeSubheading
       {Accenture}{Campina Grande, Paraiba, Brazil}
       {MES MOM and Automation Associate (Full-Time)}{Dec 2021 \textbf{--} Jun 2022}
@@ -277,20 +291,20 @@
 %     }}
 %   \resumeSubHeadingListEnd
 
-% ---------- RESEARCH PUBLICATIONS -------
+% ---------- CONFERENCE AND ARTICLE PUBLICATIONS -------
 
-%\setlength{\bibhang}{3pt}
-%\defbibenvironment{bibliography}
-%{\list
-%	{}
-%	{\setlength{\leftmargin}{\bibhang}%
-%		\setlength{\itemindent}{-\leftmargin}%
-%		\setlength{\itemsep}{\bibitemsep}%
-%		\setlength{\parsep}{\bibparsep}}}
-%{\endlist}
-%{\item}
-%\nocite{*}
-%\printbibliography[env = bibliography, title= Selected Research Publications - Complete list on my {\href{https://scholar.google.com/citations?user=SNptGbgAAAAJ&hl=en}{\color{blue}Google Scholar.}} ]
+\setlength{\bibhang}{3pt}
+\defbibenvironment{bibliography}
+{\list
+	{}
+	{\setlength{\leftmargin}{\bibhang}%
+		\setlength{\itemindent}{-\leftmargin}%
+		\setlength{\itemsep}{\bibitemsep}%
+		\setlength{\parsep}{\bibparsep}}}
+{\endlist}
+{\item}
+\nocite{*}
+\printbibliography[env = bibliography, title= Selected Research Contributions- Complete list on my {\href{https://scholar.google.com/citations?user=https://scholar.google.com/cit&hl=&user=ANQED-oAAAAJ}{\color{blue}Google Scholar.}} ]
 
 
 %----------- PROJECTS -----------
@@ -330,7 +344,7 @@
     \small{\item{
         \textbf{Programming:}{ Python, MATLAB, CSharp, Visual Basic for Applications(VBA), Markdown, LaTeX and exposure to R} \\ \vspace{3pt}
         
-        \textbf{Technologies/Platforms:}{ Git, GitHub, Simulink} \\ \vspace{3pt}
+        \textbf{Technologies/Platforms:}{ AVEVA PI System, Git, GitHub, Simulink} \\ \vspace{3pt}
 
         \textbf{Process simulation:}{ Aspen Plus, AVEVA Process Simulation, Ansys CFX} \\ \vspace{3pt}
         
@@ -351,9 +365,9 @@
   \vspace{2pt}
   \resumeSubHeadingListStart
     \small{\item{
-        \textbf{Major coursework:}{ Transport Phenomena, Advanced Chemical Engineering Thermodynamics, Chemical Reaction Engineering, Mathematical Methods in Chemical Engineering, Statistical Methods, Oil and Gas Refining, Teaching Practicum} \\ \vspace{3pt}
+        \textbf{Major coursework:}{ Transport Phenomena, Advanced Chemical Engineering Thermodynamics, Chemical Reaction Engineering, Statistical Methods, Oil and Gas Refining} \\ \vspace{3pt}
         
-        \textbf{Minor coursework:}{ Dynamic Simulations, Linear Control Systems, Advanced Optimization}
+        \textbf{Minor coursework:}{Advanced Process Systems Engineering, Electrochemical Energy Technologies,  Linear and Nonlinear Optimization}
     }}
   \resumeSubHeadingListEnd
 
