--- a/victor_alves_cv.tex
+++ b/victor_alves_cv.tex
@@ -191,7 +191,8 @@
             \resumeItem{Collaboration with Columbia University: Modeling and simulation of ex-situ 
             carbon mineralization using coal fly ash.}
             \resumeItem{Collaboration with University of Maryland: 
-            Techno-economic analysis for depolymerization of plastics using electrified spatiotemporal heating}
+            Techno-economic analysis for depolymerization of 
+            plastics using electrified spatiotemporal heating.}
         \resumeItemListEnd
     
     \resumeSubheading
@@ -253,7 +254,7 @@
       {Accenture}{Campina Grande, Paraiba, Brazil}
       {MES MOM and Automation Associate (Full-Time)}{Dec 2021 \textbf{--} Jun 2022}
         \resumeItemListStart
-            \resumeItem{Application of the PI System™ and Aspen InfoPlus.21® software to collect, store, view, analyze, and share operational data with users.}
+            \resumeItem{Application of the AVEVA PI System™ and Aspen InfoPlus.21® software to collect, store, view, analyze, and share operational data with users.}
             \resumeItem{Understand and refine processes, working with clients to simplify, standardize and automate work and business processes found in manufacturing.}
           \resumeItemListEnd
 
@@ -262,7 +263,7 @@
     {Accenture}{Campina Grande, Paraiba, Brazil}
     {MES MOM and Automation New Associate (Part-Time)}{Nov 2020 \textbf{--} Nov 2021}
       \resumeItemListStart
-          \resumeItem{Application of the PI System™ and Aspen InfoPlus.21® software to collect, store, view, analyze, and share operational data with users.}
+          \resumeItem{Application of the AVEVA PI System™ and Aspen InfoPlus.21® software to collect, store, view, analyze, and share operational data with users.}
           \resumeItem{Understand and refine processes, working with clients to simplify, standardize and automate work and business processes found in manufacturing.}
         \resumeItemListEnd
 
