--- a/beatriz_dantas_cv.tex
+++ b/beatriz_dantas_cv.tex
@@ -158,9 +158,9 @@
 
 \section{Education}
   \vspace{3pt}
-  \resumeSubHeadingListStart
-    
-    \resumeEducationHeading
+  \resumeSubHeadingListStart 
+
+    \resumeSubheading
       {West Virginia University
       }{Morgantown, WV, USA}
       {Ph.D. Student, Chemical Engineering;}{Aug 2022 \textbf{--} May 2027 (Expected, flexible)}
@@ -169,7 +169,7 @@
             % \resumeItem{\textbf{Relevant coursework:} Calculus I-II, Matrix Theory, Differential Equations, Materials Science, Electrical Circuits I-II, Digital System Design, Numerical Methods, Probability Theory, Electronics I-II, Signals and Systems, Electromagnetic Field Theory, Energy Conversion, System Dynamics and Control, Communication Engineering}
         % \resumeItemListEnd
     
-    \resumeEducationHeading
+        \resumeSubheading
       {Federal University of Campina Grande
       }{Campina Grande, Paraiba, Brazil}
       {B.Sc., Chemical Engineering;}{Apr 2017 \textbf{--} Apr 2022}
@@ -204,6 +204,20 @@
             using the GREENSCOPE methodology.}
         \resumeItemListEnd
     
+
+    \resumeSubheading
+    {Federal University of Campina Grande}{Campina Grande, Paraiba, Brazil}
+    {Undergraduate Research  (B.Sc.)}{Sep 2019 \textbf{--} Apr 2022}
+      \resumeItemListStart
+          \resumeItem{Research and development for PETROBRAS:
+          Modeling and evaluation of explosive atmospheres
+           due to the biphasic release of liquids and fluids.}
+          \resumeItem{Evaluation of the effect of obstacles on the dispersion of gases for area classification.}
+          \resumeItem{Application of CFD techniques in the 
+          risk area classification study for the 
+          technological development of industrial processes.}
+      \resumeItemListEnd
+      
   \resumeSubHeadingListEnd
 
 %----------- WORK EXPERIENCE -----------
@@ -230,22 +244,11 @@
         % \resumeItemListEnd
 
     % \vspace{15pt}
-    \resumeSubheading
-      {Federal University of Campina Grande}{Campina Grande, Paraiba, Brazil}
-      {Undergraduate Research}{Sep 2019 \textbf{--} Apr 2022}
-        \resumeItemListStart
-            \resumeItem{Research and development for PETROBRAS:
-            Modeling and evaluation of explosive atmospheres
-             due to the biphasic release of liquids and fluids.}
-            \resumeItem{Evaluation of the effect of obstacles on the dispersion of gases for area classification.}
-            \resumeItem{Application of CFD techniques in the 
-            risk area classification study for the 
-            technological development of industrial processes.}
-        \resumeItemListEnd
+
     
    \resumeSubheading
       {West Virginia University}{Virtual Appointment}
-      {Undergraduate Research}{May 2021 \textbf{--} Aug. 2021}
+      {Sumeer Intern}{May 2021 \textbf{--} Aug. 2021}
         \resumeItemListStart
             \resumeItem{Multi-stage membrane configuration for direct air capture.}
         \resumeItemListEnd    
@@ -343,9 +346,9 @@
   \vspace{2pt}
   \resumeSubHeadingListStart
     \small{\item{
-        \textbf{Programming:}{ Python, MATLAB, CSharp, Visual Basic for Applications(VBA), Markdown, LaTeX and exposure to R} \\ \vspace{3pt}
+        \textbf{Programming:}{ Python, MATLAB, CSharp, Visual Basic for Applications(VBA), R} \\ \vspace{3pt}
         
-        \textbf{Technologies/Platforms:}{ AVEVA PI System, Git, GitHub, Simulink} \\ \vspace{3pt}
+        \textbf{Technologies/Platforms:}{ AVEVA PI System, Git, GitHub} \\ \vspace{3pt}
 
         \textbf{Process simulation:}{ Aspen Plus, AVEVA Process Simulation, Ansys CFX} \\ \vspace{3pt}
         
@@ -366,7 +369,7 @@
   \vspace{2pt}
   \resumeSubHeadingListStart
     \small{\item{
-        \textbf{Major coursework:}{ Transport Phenomena, Advanced Chemical Engineering Thermodynamics, Chemical Reaction Engineering, Statistical Methods, Oil and Gas Refining} \\ \vspace{3pt}
+        \textbf{Major coursework:}{ Transport Phenomena, Advanced Chemical Engineering Thermodynamics, Chemical Reaction Engineering, Statistical and Numerical Methods for Chemical Engineering, Oil and Gas Refining} \\ \vspace{3pt}
         
         \textbf{Minor coursework:}{Advanced Process Systems Engineering, Electrochemical Energy Technologies,  Linear and Nonlinear Optimization}
     }}
