--- a/beatriz_dantas_cv.tex
+++ b/beatriz_dantas_cv.tex
@@ -188,11 +188,8 @@
       {Graduate Research Assistant (Ph.D.)}{Aug 2022 \textbf{--} Currently}
         \resumeItemListStart
             \resumeItem{Proton Exchange Membrane Water Electrolysis (PEMWE) system assessment via flexibility and operability analysis. }
-            \resumeItem{Collaboration with Columbia University: Modeling and simulation of ex-situ 
+            \resumeItem{Modeling and simulation of ex-situ 
             carbon mineralization using coal fly ash.}
-            \resumeItem{Collaboration with University of Maryland: 
-            Techno-economic analysis for depolymerization of 
-            plastics using electrified spatiotemporal heating.}
         \resumeItemListEnd
     
     \resumeSubheading
@@ -246,27 +243,28 @@
     % \vspace{15pt}
 
     
-   \resumeSubheading
-      {West Virginia University}{Virtual Appointment}
-      {Sumeer Intern}{May 2021 \textbf{--} Aug. 2021}
-        \resumeItemListStart
-            \resumeItem{Multi-stage membrane configuration for direct air capture.}
-        \resumeItemListEnd    
+ 
 
     \resumeSubheading
       {Accenture}{Campina Grande, Paraiba, Brazil}
       {MES MOM and Automation Associate (Full-Time)}{Dec 2021 \textbf{--} Jun 2022}
         \resumeItemListStart
-            \resumeItem{Application of the AVEVA PI System™ and Aspen InfoPlus.21® software to collect, store, view, analyze, and share operational data with users.}
+            \resumeItem{Application of the AVEVA PI System and Aspen InfoPlus.21 software to collect, store, view, analyze, and share operational data with users.}
             \resumeItem{Understand and refine processes, working with clients to simplify, standardize and automate work and business processes found in manufacturing.}
           \resumeItemListEnd
 
+    \resumeSubheading
+    {West Virginia University}{Virtual Appointment}
+    {Sumeer Intern}{May 2021 \textbf{--} Aug. 2021}
+      \resumeItemListStart
+          \resumeItem{Multi-stage membrane configuration for direct air capture.}
+      \resumeItemListEnd   
 
     \resumeSubheading
     {Accenture}{Campina Grande, Paraiba, Brazil}
     {MES MOM and Automation New Associate (Part-Time)}{Nov 2020 \textbf{--} Nov 2021}
       \resumeItemListStart
-          \resumeItem{Application of the AVEVA PI System™ and Aspen InfoPlus.21® software to collect, store, view, analyze, and share operational data with users.}
+          \resumeItem{Application of the AVEVA PI System and Aspen InfoPlus.21 software to collect, store, view, analyze, and share operational data with users.}
           \resumeItem{Understand and refine processes, working with clients to simplify, standardize and automate work and business processes found in manufacturing.}
         \resumeItemListEnd
 
