--- a/beatriz_dantas_cv.tex
+++ b/beatriz_dantas_cv.tex
@@ -15,7 +15,7 @@
 \usepackage{fontawesome}
 \input{glyphtounicode}
 
-\usepackage[backend=bibtex,defernumbers=true,maxbibnames=10]{biblatex}
+\usepackage[backend=bibtex,defernumbers=true,maxbibnames=10, sorting= ydnt]{biblatex}
 \addbibresource{papers.bib}
 
 
@@ -163,7 +163,7 @@
     \resumeSubheading
       {West Virginia University
       }{Morgantown, WV, USA}
-      {Ph.D. Student, Chemical Engineering;}{Aug 2022 \textbf{--} May 2027 (Expected, flexible)}
+      {Ph.D. Student, Chemical Engineering \textbf{--} GPA: 4.0/4.0}{Aug 2022 \textbf{--} May 2027 (Expected)}
       {}{}
         % \resumeItemListStart
             % \resumeItem{\textbf{Relevant coursework:} Calculus I-II, Matrix Theory, Differential Equations, Materials Science, Electrical Circuits I-II, Digital System Design, Numerical Methods, Probability Theory, Electronics I-II, Signals and Systems, Electromagnetic Field Theory, Energy Conversion, System Dynamics and Control, Communication Engineering}
@@ -172,7 +172,7 @@
         \resumeSubheading
       {Federal University of Campina Grande
       }{Campina Grande, Paraiba, Brazil}
-      {B.Sc., Chemical Engineering;}{Apr 2017 \textbf{--} Apr 2022}
+      {B.Sc., Chemical Engineering \textbf{--} GPA: 3.49/4.0}{Apr 2017 \textbf{--} Apr 2022}
       {}{}
 
   \resumeSubHeadingListEnd
@@ -187,9 +187,9 @@
       {West Virginia University}{Morgantown, WV, USA}
       {Graduate Research Assistant (Ph.D.)}{Aug 2022 \textbf{--} Currently}
         \resumeItemListStart
-            \resumeItem{Proton Exchange Membrane Water Electrolysis (PEMWE) system assessment via flexibility and operability analysis. }
+            \resumeItem{Proton Exchange Membrane Water Electrolysis (PEMWE) system assessment via flexibility and operability analysis}
             \resumeItem{Modeling and simulation of ex-situ 
-            carbon mineralization using coal fly ash.}
+            carbon mineralization and rare earth elements extraction using coal fly ash}
         \resumeItemListEnd
     
     \resumeSubheading
@@ -197,8 +197,8 @@
       {Undergraduate Research  (B.Sc.)}{Sept 2020 \textbf{--} Sept 2021}
         \resumeItemListStart
             \resumeItem{B.Sc. final project: ``Integrated platform developed in 
-            CSharp to evaluate the intensification of ethylbenzene production 
-            using the GREENSCOPE methodology.}
+            C\# to evaluate the intensification of ethylbenzene production 
+            using the GREENSCOPE methodology}
         \resumeItemListEnd
     
 
@@ -208,11 +208,11 @@
       \resumeItemListStart
           \resumeItem{Research and development for PETROBRAS:
           Modeling and evaluation of explosive atmospheres
-           due to the biphasic release of liquids and fluids.}
-          \resumeItem{Evaluation of the effect of obstacles on the dispersion of gases for area classification.}
+           due to the biphasic release of liquids and fluids}
+          \resumeItem{Evaluation of the effect of obstacles on the dispersion of gases for area classification}
           \resumeItem{Application of CFD techniques in the 
           risk area classification study for the 
-          technological development of industrial processes.}
+          technological development of industrial processes}
       \resumeItemListEnd
       
   \resumeSubHeadingListEnd
@@ -225,10 +225,10 @@
     
     \resumeSubheading
       {Columbia University}{New York, NY, USA}
-      {Visiting Scholar (Ph.D.)}{Jul. 2023 }
+      {Research visit (Ph.D.)}{Jul. 2023 }
         \resumeItemListStart
-            \resumeItem{Understand the production of carbonates from industrial waste via carbon mineralization on a laboratory scale.}
-            \resumeItem{Apply the knowledge of Process System Engineering to perform process scale-up.}
+            \resumeItem{Understand the production of carbonates from industrial waste via carbon mineralization on a laboratory scale}
+            \resumeItem{Apply the knowledge of Process System Engineering to perform process scale-up}
         \resumeItemListEnd
 
 
@@ -242,30 +242,27 @@
 
     % \vspace{15pt}
 
-    
- 
-
     \resumeSubheading
       {Accenture}{Campina Grande, Paraiba, Brazil}
-      {MES MOM and Automation Associate (Full-Time)}{Dec 2021 \textbf{--} Jun 2022}
+      {Automation Analyst (Full-Time)}{Dec 2021 \textbf{--} Jun 2022}
         \resumeItemListStart
-            \resumeItem{Application of the AVEVA PI System and Aspen InfoPlus.21 software to collect, store, view, analyze, and share operational data with users.}
-            \resumeItem{Understand and refine processes, working with clients to simplify, standardize and automate work and business processes found in manufacturing.}
+            \resumeItem{Application of the AVEVA PI System and Aspen InfoPlus.21 software to collect, store, view, analyze, and share operational data with users}
+            \resumeItem{Understand and refine processes, working with clients to simplify, standardize and automate work and business processes found in manufacturing}
           \resumeItemListEnd
 
     \resumeSubheading
     {West Virginia University}{Virtual Appointment}
-    {Sumeer Intern}{May 2021 \textbf{--} Aug. 2021}
+    {Summer Intern}{May 2021 \textbf{--} Aug. 2021}
       \resumeItemListStart
-          \resumeItem{Multi-stage membrane configuration for direct air capture.}
+          \resumeItem{Multi-stage membrane configuration for direct air capture}
       \resumeItemListEnd   
 
     \resumeSubheading
     {Accenture}{Campina Grande, Paraiba, Brazil}
-    {MES MOM and Automation New Associate (Part-Time)}{Nov 2020 \textbf{--} Nov 2021}
+    {Automation Analyst (Part-Time)}{Nov 2020 \textbf{--} Nov 2021}
       \resumeItemListStart
-          \resumeItem{Application of the AVEVA PI System and Aspen InfoPlus.21 software to collect, store, view, analyze, and share operational data with users.}
-          \resumeItem{Understand and refine processes, working with clients to simplify, standardize and automate work and business processes found in manufacturing.}
+          \resumeItem{Application of the AVEVA PI System and Aspen InfoPlus.21 software to collect, store, view, analyze, and share operational data with users}
+          \resumeItem{Understand and refine processes, working with clients to simplify, standardize and automate work and business processes found in manufacturing}
         \resumeItemListEnd
 
   \resumeSubHeadingListEnd
@@ -306,7 +303,7 @@
 {\endlist}
 {\item}
 \nocite{*}
-\printbibliography[env = bibliography, title= Selected Research Contributions- Complete list on my {\href{https://scholar.google.com/citations?user=https://scholar.google.com/cit&hl=&user=ANQED-oAAAAJ}{\color{blue}Google Scholar.}} ]
+\printbibliography[env = bibliography, title= Research publications and presentations - Complete list on my {\href{https://scholar.google.com/citations?user=https://scholar.google.com/cit&hl=&user=ANQED-oAAAAJ}{\color{blue}Google Scholar.}} ]
 
 
 %----------- PROJECTS -----------
@@ -344,7 +341,7 @@
   \vspace{2pt}
   \resumeSubHeadingListStart
     \small{\item{
-        \textbf{Programming:}{ Python, MATLAB, CSharp, Visual Basic for Applications(VBA), R} \\ \vspace{3pt}
+        \textbf{Programming:}{ Python, MATLAB, C\#, Visual Basic for Applications (VBA), R} \\ \vspace{3pt}
         
         \textbf{Technologies/Platforms:}{ AVEVA PI System, Git, GitHub} \\ \vspace{3pt}
 
@@ -367,9 +364,9 @@
   \vspace{2pt}
   \resumeSubHeadingListStart
     \small{\item{
-        \textbf{Major coursework:}{ Transport Phenomena, Advanced Chemical Engineering Thermodynamics, Chemical Reaction Engineering, Statistical and Numerical Methods for Chemical Engineering, Oil and Gas Refining} \\ \vspace{3pt}
+        \textbf{Required coursework:}{ Transport Phenomena, Advanced Chemical Engineering Thermodynamics, Chemical Reaction Engineering, Statistical and Numerical Methods for Chemical Engineering} \\ \vspace{3pt}
         
-        \textbf{Minor coursework:}{Advanced Process Systems Engineering, Electrochemical Energy Technologies,  Linear and Nonlinear Optimization}
+        \textbf{Electives coursework:}{Advanced Process Systems Engineering, Electrochemical Energy Technologies,  Linear and Nonlinear Optimization, Oil and Gas Refining}
     }}
   \resumeSubHeadingListEnd
 
