--- a/papers.bib
+++ b/papers.bib
@@ -17,4 +17,18 @@
   publisher={Elsevier}
 }
 
+@inproceedings{almeida2022comparative,
+  title={Comparative Study for Evaluation of Thermal Integration Projects Based on Pinch Technology},
+  author={Almeida, {\'I}caro and Dantas, Beatriz and Andrade, Fernanda and Reges, Heloyse and Lima, Wilton and Lima, Fernando V and Bispo, Heleno},
+  booktitle={2022 AIChE Annual Meeting},
+  year={2022},
+  organization={AIChE}
+}
 
+@inproceedings{gadelha2022development,
+  title={Development and Application of Customized Symbols in PI Vision for KPI Monitoring Based on the Greenscope Methodology},
+  author={Gadelha, Esmael and Guerra, Igor and Almeida, Natalya AB and Dantas, Beatriz and Lima, Fernando V and Bispo, Heleno},
+  booktitle={2022 AIChE Annual Meeting},
+  year={2022},
+  organization={AIChE}
+}
